# docker-volume-backup

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: backup.sh  configuration.rs  docker.rs  error.rs  main.rs  setup-cron.sh
src/shell/: setup-cron.sh  setup.sh
