[package]
name = "salvage"
version = "0.5.0"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2021"
rust-version = "1.70"
description = "Simple volume backup utility for Docker cotnainers"
homepage = "https://github.com/kwheelans/salvage"
license = "MIT"
keywords = []
readme = "README.md"
repository = "https://github.com/kwheelans/salvage"

[dependencies]
log = "0.4"
flate2 = "1"
simple_logger = { version = "4", default-features = false, features = ["timestamps"]}
tar = "0.4"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
thiserror = "1"
xz2 = "0.1"

[profile.release]
lto = true
codegen-units = 1
