[package]
name = "salvage"
version = "0.7.2"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2021"
rust-version = "1.70"
description = "A docker container utility to schedule archiving container volumes."
homepage = "https://github.com/kwheelans/salvage"
license = "MIT"
keywords = ["docker","volume", "docker-volume-backup"]
readme = "README.md"
repository = "https://github.com/kwheelans/salvage"

[dependencies]
bollard = "0.15"
bzip2 = "0.4"
log = "0.4"
flate2 = "1"
simple_logger = { version = "4", default-features = false, features = ["timestamps"]}
tar = "0.4"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
thiserror = "1"
tokio = {version = "1", features = ["rt"]}
xz2 = "0.1"
zstd = "0.13"

[profile.release]
lto = true
codegen-units = 1
